preloader is done

--- a/sass/prepros-6.config
+++ b/sass/prepros-6.config
@@ -10,6 +10,10 @@
     {
       "path": "style.scss",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "site/_main.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -67,72 +71,6 @@
         "media/_galleries.scss",
         "layout/_no-sidebar.scss"
       ]
-    },
-    {
-      "path": "elements/_elements.scss",
-      "imports": [
-        "elements/_lists.scss",
-        "elements/_tables.scss"
-      ]
-    },
-    {
-      "path": "forms/_forms.scss",
-      "imports": [
-        "forms/_buttons.scss",
-        "forms/_fields.scss"
-      ]
-    },
-    {
-      "path": "layout/_content-sidebar.scss",
-      "imports": [
-        "layout/_no-sidebar.scss"
-      ]
-    },
-    {
-      "path": "layout/_sidebar-content.scss",
-      "imports": [
-        "layout/_no-sidebar.scss"
-      ]
-    },
-    {
-      "path": "media/_media.scss",
-      "imports": [
-        "media/_captions.scss",
-        "media/_galleries.scss"
-      ]
-    },
-    {
-      "path": "navigation/_navigation.scss",
-      "imports": [
-        "navigation/_links.scss",
-        "navigation/_menus.scss"
-      ]
-    },
-    {
-      "path": "site/_site.scss",
-      "imports": [
-        "layout/_content-sidebar.scss",
-        "layout/_sidebar-content.scss",
-        "site/primary/_posts-and-pages.scss",
-        "site/primary/_comments.scss",
-        "layout/_no-sidebar.scss"
-      ]
-    },
-    {
-      "path": "typography/_typography.scss",
-      "imports": [
-        "typography/_headings.scss",
-        "typography/_copy.scss"
-      ]
-    },
-    {
-      "path": "variables-site/_variables-site.scss",
-      "imports": [
-        "variables-site/_colors.scss",
-        "variables-site/_typography.scss",
-        "variables-site/_structure.scss",
-        "variables-site/_columns.scss"
-      ]
     }
   ],
   "projectView": {
@@ -177,7 +115,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7888,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
